Trying to fix the format on mobile

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body {
     .navbar {
         background-color: rgba(20, 32, 20, 0.6);
         height: 50px;
-        width: 100%;
+        width: 100vh;
         border-bottom-left-radius: 25%;
         border-bottom-right-radius: 25%;
         position: fixed;
